<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="countries">Countries</string>
    <string name="settings">Settings</string>
    <string name="restoreCountriesData">Restore Countries data</string>
    <string name="addCountry">Add Country</string>
    <string name="editCountry">Edit Country</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="population">Population</string>
    <string name="countryName">Country name</string>
    <string name="capitalCity">Capital city</string>
    <string name="populationExample">example: 45.000.000</string>
    <string name="countryNameExample">example: El Salvador</string>
    <string name="capitalCityExample">example: San Salvador</string>
    <string name="ooops">Ooops</string>
    <string name="errorSearchingCountries">An error occurred while searching for countries. Please try again.</string>
    <string name="flagsAndCoatOfArms">Flags and Coat of arms</string>
    <string name="exploreTheFlagsAndCoatOfArms">Explore the diverse flags and coats of arms of the countries!</string>
    <string name="fullInformation">Full information</string>
    <string name="learnMoreAboutCountries">Learn more details about countries!</string>
    <string name="searchCountries">Search countries ...</string>
    <string name="welcome">Welcome!</string>
    <string name="sorry">Sorry!</string>
    <string name="weHaventFoundAnyCountry">We haven\'t found any country with those parameters. Please try again.</string>
    <string name="statistics">Statistics</string>
    <string name="compareAndGetInsight">Compare and get insight about countries characteristics.</string>
    <string name="southAmerica">South America</string>
    <string name="northAmerica">North America</string>
    <string name="africa">Africa</string>
    <string name="europe">Europe</string>
    <string name="oceania">Oceania</string>
    <string name="asia">Asia</string>
    <string name="antarctica">Antarctica</string>
    <string name="continent">Continent</string>
    <string name="unknown">Unknown</string>
    <string name="unitedNations">United Nations</string>
    <string name="currency">Currency</string>
    <string name="phone">Phone</string>
    <string name="phoneCode">Phone code</string>

    <!-- Strings for content description / Accessibility-->
    <string name="addCountry_CD">add country</string>
    <string name="editCountry_CD">edit country %s</string>
    <string name="restoreCountriesData_CD">restore countries data</string>
    <string name="back_CD">go back</string>
    <string name="save_CD">save</string>
    <string name="edit_CD">edit</string>
    <string name="details_CD">%s details</string>
    <string name="edit_details_CD">edit %s details</string>
    <string name="exploreTheFlagsAndCoatOfArms_CD">Explore the diverse flags and coats of arms of the countries</string>
    <string name="learnMoreAboutCountries_CD">Learn more details about countries</string>
    <string name="compareAndGetInsight_CD">Compare and get insight about countries characteristics.</string>
    <string name="continent_CD">Continent %s</string>
    <string name="unitedNations_CD">United Nations</string>
    <string name="currency_CD">Currency %s</string>
    <string name="phone_CD">Phone %s</string>
    <string name="phoneCode_CD">Phone code %</string>
    <string name="loading_CD">loading</string>
    <string name="error_CD">error</string>
    <string name="success_CD">success</string>
</resources>